--- a/DevOps/Docker/docker_compose/example/docker-compose.yml
+++ b/DevOps/Docker/docker_compose/example/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   web:
     build: .
+    image: docker-compose-example
     container_name: docker-compose-example
     ports:
       - "5000:5000"
