--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,9 @@ indent_size = 2
 [*.js]
 indent_size = 2
 
+[*.{h,c,cpp,cc}]
+indent_size = 2
+
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
