--- a/OpenGL/00_hello_world/CMakeLists.txt
+++ b/OpenGL/00_hello_world/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10.2)
-project(opengl_example)
+project(OpenGLExample C CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSION OFF)
 
@@ -17,35 +17,27 @@ endif()
 find_package(OpenGL REQUIRED)
 # Find GLUT
 find_package(GLUT REQUIRED)
-# Linux
-# If not on macOS, we need glew.
-if(UNIX AND NOT APPLE)
-    find_package(GLEW REQUIRED)
-endif()
+# Find GLFW
+find_package(GLFW3 REQUIRED)
+# Find GLEW
+find_package(GLEW REQUIRED)
+# link_directories(/opt/homebrew/Cellar/glew/2.2.0_1/lib)
+# link_directories(/opt/homebrew/Cellar/glfw/3.3.8/lib)
 
 # OPENGL_INCLUDE_DIR, GLUT_INCLUDE_DIR, OPENGL_LIBRARIES, and
 # GLUT_LIBRARIES are CMake built-in variables defined when the packages
 # are found.
-set(INCLUDE_DIRS ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
+set(INCLUDE_DIRS ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS})
 set(LIBRARIES ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
 
-# If not on macOS, add glew include directory and library path to lists.
-if(UNIX AND NOT APPLE)
-    list(APPEND INCLUDE_DIRS ${GLEW_INCLUDE_DIRS})
-    list(APPEND LIBRARIES ${GLEW_LIBRARIES})
-endif()
-
 include_directories(${INCLUDE_DIRS})
+# Include all files
+include_directories("${CMAKE_SOURCE_DIR}/src")
 
-# Source files
-FILE(GLOB_RECURSE SOURCE_FILES
-    "${CMAKE_SOURCE_DIR}/src/*.cpp"
-    "${CMAKE_SOURCE_DIR}/src/*.cc"
-    "${CMAKE_SOURCE_DIR}/src/*.c"
-)
-
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-target_link_libraries(
-    ${PROJECT_NAME}
-    ${LIBRARIES}
-)
+foreach(_target
+    main_glut main_glfw)
+    add_executable(${_target}
+        "src/${_target}.cc")
+    target_link_libraries(${_target}
+        ${LIBRARIES} GLEW::glew glfw)
+endforeach()
